Fixed bug with select in author

--- a/templates/index.html
+++ b/templates/index.html
@@ -73,7 +73,7 @@
         <tr>
             <td>{{name}}</td>
             <td><{{id}}</td>
-            <td class="btn_select"><a class ="sel" href="/{{id}}">Select</a></td>
+            <td class="btn_select"><a class ="sel" href="/autor/{{id}}">Select</a></td>
             <td class="btn_delete"><a class ="del" href="/deleteAutor/{{id}}">eliminar</a></td>
         </tr>
         {% endfor %}
