--- a/templates/libro.html
+++ b/templates/libro.html
@@ -74,8 +74,8 @@
         <tr>
             <td>{{name}}</td>
             <td><{{id}}</td>
-            <td class="btn_select"><a class ="sel"  href="/libro/{{id}}">Select</a></td>
-            <td class="btn_delete"><a class ="del"  href="/deleteLibro/{{id}}">eliminar</a></td>
+            <td class="btn_select"><a class ="sel"  href="/libro/{{id}}"><br>seleccionar</a></td>
+            <td class="btn_delete"><a class ="del"  href="/deleteLibro/{{id}}"><br>eliminar</a></td>
         </tr>
         {% endfor %}
     </table>
