--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -169,15 +169,16 @@ nav ul .menu:hover ul {
 
 #autores td.btn_select{
   background-color: #ffc300;
-  text-align: center;
+  text-align:center;
   width: 15%;
   letter-spacing: 2px;
   cursor: pointer;
-  padding: 10px;
+  padding: 0px;
+  padding-bottom: 5px;
   text-transform: capitalize;
   color: white;
-  font-size: 18px;
   margin-top: 30px;
+  font-size: 18px;
   font-weight: bold;
 }
 
@@ -187,23 +188,34 @@ nav ul .menu:hover ul {
   width: 15%;
   letter-spacing: 2px;
   cursor: pointer;
-  padding: 10px;
+  padding: 0px;
+  padding-bottom: 5px;
   text-transform: capitalize;
   color: white;
   font-size: 18px;
   margin-top: 30px;
   font-weight: bold;
+  
 }
 #autores a.sel{
   font-weight: bold;
   color: #003566;
   text-decoration: none;
+  text-align: center;
+  text-align: center;
+  display: block;
+  height: 60px;
+  width: 200px;
 }
 
 #autores a.del{
   font-weight: bold;
   text-decoration: none;
   color: white;
+  display: block;
+  height: 60px;
+  width: 200px;
+  
 }
 
 .btn-group button {
@@ -233,3 +245,4 @@ nav ul .menu:hover ul {
   background-color: #005FB8;
   border: 1px solid #3599f7;
 }
+
