Querys html's corrected

--- a/templates/consultaL.html
+++ b/templates/consultaL.html
@@ -45,7 +45,7 @@
     </nav>
 
     <div class="contenedor">
-        <h2>Consulta 1.</h2>
+        <h2>Consulta 1. Listado de las copias de libros </h2>
     </div>
 
     <table id="autores">
