--- a/templates/consultaU.html
+++ b/templates/consultaU.html
@@ -37,8 +37,8 @@
                 <a>Consultas<span>&rsaquo;</span></a>
                 
                 <ul>
-                    <li><a href="consultaL">Consulta 1.</a></li>
-                    <li><a href="consultaU">Consulta 2.</a></li>
+                    <li><a href="/consultaL">Consulta 1.</a></li>
+                    <li><a href="/consultaU">Consulta 2.</a></li>
                 </ul> 
             </li> 
        </ul> 
