--- a/templates/consultaL.html
+++ b/templates/consultaL.html
@@ -22,11 +22,11 @@
                
                 <ul>
                     <li><a href="/">Autor</a></li>
-                    <li><a href="libro">Libro</a></li>
-                    <li><a href="edicion">Edición</a></li>
-                    <li><a href="copia">Copia</a></li>
-                    <li><a href="usuario">Usuario</a></li>
-                    <li><a href="prestamo">Préstamo</a></li>
+                    <li><a href="/libro">Libro</a></li>
+                    <li><a href="/edicion">Edición</a></li>
+                    <li><a href="/copia">Copia</a></li>
+                    <li><a href="/usuario">Usuario</a></li>
+                    <li><a href="/prestamo">Préstamo</a></li>
                 </ul> 
             </li> 
             
@@ -37,8 +37,8 @@
                 <a>Consultas<span>&rsaquo;</span></a>
                 
                 <ul>
-                    <li><a href="consultaL">Consulta 1.</a></li>
-                    <li><a href="consultaU">Consulta 2.</a></li>
+                    <li><a href="/consultaL">Consulta 1.</a></li>
+                    <li><a href="/consultaU">Consulta 2.</a></li>
                 </ul> 
             </li> 
        </ul> 
