--- a/templates/index.html
+++ b/templates/index.html
@@ -22,12 +22,12 @@
                 <a>CRUD<span>&rsaquo;</span></a>
                
                 <ul>
-                    <li><a href="">Autor</a></li>
-                    <li><a href="libro">Libro</a></li>
-                    <li><a href="edicion">Edición</a></li>
-                    <li><a href="copia">Copia</a></li>
-                    <li><a href="usuario">Usuario</a></li>
-                    <li><a href="prestamo">Préstamo</a></li>
+                    <li><a href="/">Autor</a></li>
+                    <li><a href="/libro">Libro</a></li>
+                    <li><a href="/edicion">Edición</a></li>
+                    <li><a href="/copia">Copia</a></li>
+                    <li><a href="/usuario">Usuario</a></li>
+                    <li><a href="/prestamo">Préstamo</a></li>
                 </ul> 
             </li> 
             
@@ -38,8 +38,8 @@
                 <a>Consultas<span>&rsaquo;</span></a>
                 
                 <ul>
-                    <li><a href="consultaL">Consulta 1.</a></li>
-                    <li><a href="consultaU">Consulta 2.</a></li>
+                    <li><a href="/consultaL">Consulta 1.</a></li>
+                    <li><a href="/consultaU">Consulta 2.</a></li>
                 </ul> 
             </li> 
        </ul> 
